--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -245,5 +245,5 @@ admin_password = root
 
 ;#################################### Dashboard JSON files ##########################
 [dashboards.json]
-;enabled = false
+;enabled = true
 ;path = /var/lib/grafana/dashboards
